Fixed dark mode for Contact so that it looks good. Also fixed so that the accordion is working as intended.

--- a/src/assets/css/Scss/colors/_dark-theme.scss
+++ b/src/assets/css/Scss/colors/_dark-theme.scss
@@ -7,6 +7,7 @@
   --color-secondarybg: #F3F6FF;
   --color-thirdbg: #fff;
   --color-fourthbg: #fff;
+  --color-fifthbg: #fff;
   --color-border: #D4D7E5;
   --color-secondaryborder: #D4D7E5;
   --color-input: #FFF;
@@ -33,6 +34,7 @@
   --color-text600-white: #9397ad;
   --color-text700-white: #565973;
   --color-button-text: #fff;
+  --color-darktheme-text: #0b0f19;
 
   /* System colors: */
   --color-system-error: #ef4444;
@@ -63,6 +65,7 @@
     --color-secondarybg: #161822;
     --color-thirdbg: #1f212b;
     --color-fourthbg: #131022;
+    --color-fifthbg: #d4d7e5;
     --color-border: #FFFFFF26;
     --color-bordersecondary: #e2e5f1;
     --color-input: rgba(255, 255, 255, 0.02);
@@ -90,6 +93,7 @@
     --color-text600-white: #FFFFFF80;
     --color-text700-white: #FFFFFFB3;
     --color-button-text: #33354d;
+    --color-darktheme-text: #FFFFFFB3;
   
     /* System colors: */
     --color-system-error: #ef4444;
